Added sendHeight function

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -56,5 +56,15 @@
         }
       });
     </script>
+    <script>
+    function sendHeight() {
+      const height = document.body.scrollHeight;
+      parent.postMessage({ type: 'setHeight', height }, '*');
+      console.log('Height sent:', height);
+    }
+
+    window.addEventListener('load', sendHeight);
+    window.addEventListener('resize', sendHeight);
+  </script>
   </body>
 </html>
